--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -79,4 +79,17 @@
       }
     }
   }
+  &__payment {
+    //
+  }
+  &__flexwrap {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 1rem;
+    img {
+      width: 70px;
+      height: 40px;
+    }
+  }
 }
