--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -4,12 +4,29 @@
     position: relative;
     width: 100%;
     display: grid;
+    grid-template-areas: 
+    'links'
+    'socials'
+    'newsletter'
+    'payment'
+    'copyright';
     gap: 3rem;
     padding: 1rem;
+    @media (min-width:800px) {
+      grid-template-areas: 
+      'links socials'
+      'links newsletter'
+      'copyright payment';
+    }
+    @media (min-width:1200px) {
+      max-width: 1200px;
+      margin: 0 auto;
+    }
   }
   img {
     width: 140px;
     height: 40px;
+    object-fit: contain;
   }
   h3 {
     font-size: 15px;
@@ -17,8 +34,12 @@
     color: #222;
   }
   &__links {
+    grid-area: links;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    @media (max-width: 400px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
     ul {
       padding: 5px; 
       li {
@@ -34,6 +55,7 @@
     }
   }
   &__socials {
+    grid-area: socials;
     section {
       ul {
         margin-top: 10px;
@@ -55,6 +77,7 @@
     margin-top: 10px;
   }
   &__newsletter {
+    grid-area: newsletter;
     input {
       flex: 1;
       outline: none;
@@ -80,7 +103,7 @@
     }
   }
   &__payment {
-    //
+    grid-area: payment;
   }
   &__flexwrap {
     display: flex;
@@ -93,6 +116,7 @@
     }
   }
   &__copyright {
+    grid-area: copyright;
     section {
       display: flex;
       align-items: center;
