--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -101,7 +101,7 @@
   gap: 2rem;
   padding: 1rem 0;
   box-shadow: $shadow-1;
-  width: 250px;
+  width: 270px;
   position: absolute;
   top: 100%;
   right: 0;
@@ -135,6 +135,7 @@
   .col {
     display: flex;
     flex-direction: column;
+    padding-left: .5rem;
     span {
       &:last-of-type {
         color: $blue-color;
