--- a/components/inputs/login/login.module.scss
+++ b/components/inputs/login/login.module.scss
@@ -1,6 +1,6 @@
 .input {
   position: relative;
-  max-width: 380px;
+  max-width: 360px;
   width: 100%;
   background-color: #f0f0f0;
   margin: 10px 0;
@@ -11,6 +11,9 @@
   align-items: center;
   padding: .5rem 1rem 0;
   margin-bottom: 1rem;
+  @media (max-width: 790px) {
+    max-width: 380px;
+  }
   svg {
     width: 25px;
     height: 25px;
@@ -49,7 +52,7 @@
     position: absolute;
     background: $error-color;
     top: -60px;
-    height: 50px;
+    min-height: 50px;
     width: 100%;
     border-radius: 20px;
     /* display: grid;
@@ -61,9 +64,11 @@
     color: #fff;
     font-size: 14px;
     font-weight: 700;
+    padding: .1rem 1rem;
+    line-height: 1;
     span {
       position: absolute;
-      bottom: -10px;
+      bottom: -9px;
       left: 1rem;
       border-top: 10px solid $error-color;
       border-right: 10px solid transparent;
