--- a/styles/signin.module.scss
+++ b/styles/signin.module.scss
@@ -4,10 +4,17 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
+  @media (max-width: 790px) {
+    flex-direction: column;
+    align-items: center;
+  }
   &__container {
     padding: 3rem;
     &:last-of-type {
       margin-top: 3rem;
+      @media (max-width: 790px) {
+        margin-top: 0;
+      }
     }
   }
   &__header {
@@ -47,6 +54,13 @@
       }
     }
   }
+  &__wrapper {
+    display: flex;
+    gap: 3rem;
+    @media (max-width: 790px) {
+      flex-direction: column;
+    }
+  }
   &__form {
     margin-top: 1rem;
     h1 {
@@ -70,4 +84,51 @@
       }
     }
   }
+  &__socials {
+    padding-top: 1rem;
+    .or {
+      position: relative;
+      color: #666;
+      padding-left: 8rem;
+      &::before, &::after {
+        content: '';
+        width: 130px;
+        height: 5px;
+        background-color: #66666648;
+        position: absolute;
+        top: 50%;
+      }
+      &::before {
+        // content: 'm';
+        left: 250px;
+      }
+      &::after {
+        // content: 'y';
+        left: -10px;
+      }
+    }
+    &_wrap {
+      margin: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding-left: 3rem;
+      img {
+        width: 36px;
+        cursor: pointer;
+      }
+    }
+  }
+}
+.social__btn {
+  width: 290px;
+  height: 50px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 5%;
+  background: transparent;
+  border: 1px solid #66666683;
+  cursor: pointer;
 }
