--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,6 @@
 $blue-color: #2f82ff;
 $grey-color: #f8f8f8;
+$success-color: #6cc070;
 $light-error-color: #fd010169;
 $error-color: #ed4337;
 $shadow-1: rgba(99,99,99,.2) 0px 2px 8px 0px;
