--- a/styles/signin.module.scss
+++ b/styles/signin.module.scss
@@ -132,3 +132,13 @@
   border: 1px solid #66666683;
   cursor: pointer;
 }
+
+.error {
+  color: $error-color;
+  padding: 10px;
+}
+
+.success {
+  color: $success-color;
+  padding: 10px;
+}
