--- a/components/buttons/circledIconBtn/circledIconBtn.module.scss
+++ b/components/buttons/circledIconBtn/circledIconBtn.module.scss
@@ -19,6 +19,9 @@
       }
     }
   }
+  /* &span {
+    margin-left: -30px;
+  } */
   .svg__wrap {
     width: 40px;
     height: 40px;
@@ -35,4 +38,7 @@
       fill: $blue-color;
     }
   }
+}
+.span {
+  margin-left: -30px;
 }
