--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -39,6 +39,8 @@
     grid-template-columns: repeat(3, 1fr);
     @media (max-width: 400px) {
       grid-template-columns: repeat(1, 1fr);
+      place-items: center;
+      text-align: center;
     }
     ul {
       padding: 5px; 
