--- a/styles/base.scss
+++ b/styles/base.scss
@@ -137,10 +137,13 @@ $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
 }
 
 .offersSwiper {
-  max-width: 80%;
+  max-width: 60%;
   transform: translateX(30%);
+  @media (max-width: 1000px) {
+    transform: translateX(1%);
+    max-width: 90%;
+  }
   .swiper-slide {
-    // width: 110px !important;
     width: 120px!important;
     height: 90%;
     margin-top: 0.6rem;
@@ -184,9 +187,6 @@ $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
   .swiper-slide a {
     width: 100%;
     height: 100%;
-  }
-  .swiper-button-next {
-    right: 15% !important;
   }
 }
 .userMenuSwiper {
