--- a/components/home/main/main.module.scss
+++ b/components/home/main/main.module.scss
@@ -2,7 +2,8 @@
   display: grid;
   /* grid-template-columns: 1fr 3fr 1fr; */
   grid-template-columns: 23% 57% 20%;
-  gap: 10px;
+  // gap: 5px;
+  row-gap: 5px;
   grid-template-areas: 
     'menu header header'
     'menu swiper user'
@@ -41,7 +42,7 @@
   }
   .header {
     grid-area: header;
-    height: 40px;
+    height: 30px;
     display: flex;
     align-items: center;
     @media (max-width: 730px) {
