--- a/styles/base.scss
+++ b/styles/base.scss
@@ -9,7 +9,7 @@ $reddish-color: #f15f6f;
 $shadow-1: rgba(99,99,99,.2) 0px 2px 8px 0px;
 $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
 .container { 
-  max-width: 1260px;
+  max-width: 1220px;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -101,7 +101,8 @@ $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
 
 .mainSwiper,
 .offersSwiper,
-.userMenuSwiper {
+.userMenuSwiper,
+.flashDealsSwiper {
   .swiper {
     border-radius: 10px;
   }
@@ -199,4 +200,22 @@ $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
     font-weight: bold;
     color: #fff;
   }    
+}
+.flashDealsSwiper {
+  /* .swiper-slide {
+    img {
+      border-radius: 0 !important;
+      height: 320px !important;
+    }
+  } */
+  .swiper-button-prev,
+  .swiper-button-next {
+    top: 34%;
+  }
+  @media (max-width:450px) {
+    .swiper-button-prev,
+    .swiper-button-next {
+      display: grid !important;
+  }
+  }
 }
