--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,4 +1,19 @@
 .home {
   min-height: 100vh;
   background: $grey-color;
+  &__fashion {
+    background: #fff;
+    padding: 1rem;
+  }
+  &__category {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    @media (max-width: 850px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 550px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
 }
