--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,6 +5,9 @@
     background: #fff;
     padding: 1rem;
   }
+  /* &__fashion + &__fashion {
+    margin-top: 1rem;
+  } */
   &__category {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
