--- a/components/productPage/info/info.module.scss
+++ b/components/productPage/info/info.module.scss
@@ -125,6 +125,12 @@
       display: flex;
       gap: 1rem;
     }
+    @media (max-width: 574px) {
+      margin-right: .8rem !important;
+    }
+    @media (max-width: 460px) {
+      margin: 0 !important;
+    }
     button {
       margin-top: 1rem;
       display: flex;
@@ -138,8 +144,12 @@
       font-weight: 600;
       font-size: 13px;
       cursor: pointer;
-      border-radius: 10px;
+      border-radius: 5px;
       transition: all .2s;
+      /* @media (max-width: 577px) {
+        margin-left: auto !important;
+        margin-right: auto !important;
+      } */
       svg {
         width: 30px;
         height: 30px;
