--- a/styles/product.module.scss
+++ b/styles/product.module.scss
@@ -13,6 +13,7 @@
     position: relative;
     display: grid;
     margin-top: 1rem;
+    padding: 0 .6rem;
     gap: 1rem;
     @media (min-width: 800px) {
       grid-template-columns: 1fr 350px;
