--- a/components/productPage/info/info.module.scss
+++ b/components/productPage/info/info.module.scss
@@ -1,7 +1,8 @@
 .info {
   color: #666;
   background: #fff;
-  padding: 0 .6rem;
+  // padding-right: .6rem;
+  padding: .6rem;
   @media (max-width: 840px) {
     padding-top: 1rem !important;
   }
