--- a/components/productPage/reviews/reviews.module.scss
+++ b/components/productPage/reviews/reviews.module.scss
@@ -71,4 +71,123 @@
       }
     }
   }
+  .login_btn,
+  .submit_btn {
+    width: 100%;
+    height: 50px;
+    margin-top: 1rem;
+    font-weight: 900;
+    font-size: 18px;
+    background: $yellow-color;
+    color: #fff;
+    cursor: pointer;
+  }
+  &__add {
+    margin-top: 1rem;
+    padding: 1rem;
+    background: #f7f8fa;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 10px;
+    .select {
+      margin-top: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+      &__header {
+        position: relative;
+        min-width: 80px;
+        max-width: 170px;
+        min-height: 40px;
+        border: 1px solid #ccc;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        padding: 0 10px;
+        font-weight: 700;
+        cursor: pointer;
+        img {
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+        &_wrap {
+          // position: relative;
+        }
+        &_menu {
+          position: absolute;
+          width: 150px;
+          background: #fff;
+          padding: 0;
+          top: 101%;
+          right: 0;
+          box-shadow: $shadow-1;
+          z-index: 1;
+          li {
+            width: 100%;
+            display: grid;
+            place-items: center;
+            width: 150px;
+            height: 50px;
+            &:hover {
+              background: #f7f8fa;
+            }
+            img {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+    }
+    &_wrap {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    textarea {
+      border: none;
+      outline: none;
+      resize: none;
+      padding: 1rem;
+      min-height: 150px;
+    }
+  }
+}
+.imgs_wrap {
+  margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  span {
+    position: relative;
+    img {
+      width: 100px;
+      height: 150px;
+      object-fit: cover;
+    }
+    svg {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+      fill: #fff;
+      display: none;
+    }
+    &:hover {
+      svg {
+        display: block;
+      }
+    }
+  }
 }
