--- a/components/productPage/reviews/reviews.module.scss
+++ b/components/productPage/reviews/reviews.module.scss
@@ -90,62 +90,7 @@
     flex-direction: column;
     gap: 1rem;
     border-radius: 10px;
-    .select {
-      margin-top: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 14px;
-      &__header {
-        position: relative;
-        min-width: 80px;
-        max-width: 170px;
-        min-height: 40px;
-        border: 1px solid #ccc;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 5px;
-        padding: 0 10px;
-        font-weight: 700;
-        cursor: pointer;
-        img {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-        &_wrap {
-          // position: relative;
-        }
-        &_menu {
-          position: absolute;
-          width: 150px;
-          background: #fff;
-          padding: 0;
-          top: 101%;
-          right: 0;
-          box-shadow: $shadow-1;
-          z-index: 1;
-          li {
-            width: 100%;
-            display: grid;
-            place-items: center;
-            width: 150px;
-            height: 50px;
-            &:hover {
-              background: #f7f8fa;
-            }
-            img {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              object-fit: cover;
-            }
-          }
-        }
-      }
-    }
+   //
     &_wrap {
       width: 100%;
       display: flex;
@@ -187,6 +132,62 @@
     &:hover {
       svg {
         display: block;
+      }
+    }
+  }
+}
+.select {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  &__header {
+    position: relative;
+    min-width: 80px;
+    max-width: 250px;
+    min-height: 40px;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 0 10px;
+    font-weight: 700;
+    cursor: pointer;
+    img {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    &_wrap {
+      // position: relative;
+    }
+    &_menu {
+      position: absolute;
+      width: 150px;
+      background: #fff;
+      padding: 0;
+      top: 101%;
+      right: 0;
+      box-shadow: $shadow-1;
+      z-index: 1;
+      li {
+        width: 100%;
+        display: grid;
+        place-items: center;
+        width: 150px;
+        height: 50px;
+        &:hover {
+          background: #f7f8fa;
+        }
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
       }
     }
   }
@@ -280,4 +281,15 @@
   padding-top: 1rem;
   display: flex;
   justify-content: flex-end;
+}
+.table {
+  &__header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+    padding: 0 1rem 1rem 1rem;
+    border-bottom: 1px solid #ccc;
+  }
 }
