--- a/components/home/main/main.module.scss
+++ b/components/home/main/main.module.scss
@@ -1,9 +1,8 @@
 .main {
   display: grid;
-  /* grid-template-columns: 1fr 3fr 1fr; */
   grid-template-columns: 23% 57% 20%;
-  // gap: 5px;
-  row-gap: 5px;
+  gap: 5px;
+  // row-gap: 5px;
   grid-template-areas: 
     'menu header header'
     'menu swiper user'
@@ -42,7 +41,7 @@
   }
   .header {
     grid-area: header;
-    height: 30px;
+    height: 10px;
     display: flex;
     align-items: center;
     @media (max-width: 730px) {
