--- a/components/checkout/shipping/shipping.module.scss
+++ b/components/checkout/shipping/shipping.module.scss
@@ -1,3 +1,5 @@
+@import '../base';
+
 .shipping {
   display: flex;
   flex-direction: column;
@@ -26,5 +28,101 @@
       width: 180px;
       margin-bottom: 1rem;
     }
+  }
+}
+.hide_show {
+  height: 45px;
+  width: 100%;
+  background: transparent;
+  cursor: pointer;
+  color: #000;
+  border: 1px solid #000;
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+  }
+}
+.addresses {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  .address {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    box-shadow: $shadow-1;
+    cursor: pointer;
+    padding: 1rem;
+    height: 100%;
+    &__col {
+      display: flex;
+      flex-direction: column;
+      padding: 10px 0;
+      span {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        svg {
+          fill: #666;
+        }
+      }
+    }
+    &__side {
+      height: 90px;
+      width: 90px;
+      display: grid;
+      place-items: center;
+      img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        box-shadow: $shadow-1;
+        object-fit: cover;
+      }
+    }
+    &__delete {
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      color: #000;
+      svg {
+        font-size: 1.5rem;
+        font-weight: 800;
+        fill: #666;
+      }
+    }
+    .active__text {
+      position: absolute;
+      bottom: 1rem;
+      right: 1rem;
+      font-size: 12px;
+      color: $success-color;
+      &::before {
+        content: '';
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: $success-color;
+        position: absolute;
+        left: -10px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
+}
+.active {
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 4px;
+    height: 100%;
+    background-image: url('../../../public/images/address.png');
   }
 }
