--- a/styles/checkout.module.scss
+++ b/styles/checkout.module.scss
@@ -1,7 +1,9 @@
 .checkout {
+  max-width: 1200px;
+  margin-top: 1rem;
   @media (min-width: 1000px) {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 1rem;
+    gap: 2rem;
   }
 }
