--- a/styles/base.scss
+++ b/styles/base.scss
@@ -6,6 +6,7 @@ $error-color: #ed4337;
 $yellow-color: #fac80f;
 $violet-color: #5a31f4;
 $reddish-color: #f15f6f;
+$green-color: #3c811f;
 $shadow-1: rgba(99,99,99,.2) 0px 2px 8px 0px;
 $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
 .container { 
