--- a/styles/order.module.scss
+++ b/styles/order.module.scss
@@ -107,11 +107,13 @@
   }
   &__actions {
     height: fit-content;
-    box-shadow: $shadow-1;
-    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
   &__address {
-    padding: 0 1rem;
+    padding: 1rem;
+    box-shadow: $shadow-1;
     h1 {
       font-size: 23px;
       margin-top: 1rem;
@@ -147,6 +149,10 @@
         display: block;
       }
     }
+  }
+  &__payment {
+    padding: 1rem;
+    box-shadow: $shadow-1;
   }
 }
 .not_processed {
