FE: Setup Admin dashboard - Setup expand slice (redux) to manage expand state - Implement admin dashboard sidebar markup and styling

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,4 +1,5 @@
 $blue-color: #2f82ff;
+$dark-blue-color: #1a28f1dc;
 $grey-color: #f8f8f8;
 $success-color: #6cc070;
 $light-error-color: #fd010169;
