Update Admin dashboard - Create and implement admin category (Create a category and list all created categories) - Implement markup and styling - Update middleware - Create admin middleware for authorization - Create the post, delete and update category api endpoint

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -4,6 +4,7 @@ $grey-color: #f8f8f8;
 $success-color: #6cc070;
 $light-error-color: #fd010169;
 $error-color: #ed4337;
+$error-secondary-color: #f02f2fd8;
 $yellow-color: #fac80f;
 $violet-color: #5a31f4;
 $reddish-color: #f15f6f;
