--- a/styles/base.scss
+++ b/styles/base.scss
@@ -11,6 +11,7 @@ $reddish-color: #f15f6f;
 $green-color: #3c811f;
 $shadow-1: rgba(99,99,99,.2) 0px 2px 8px 0px;
 $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
+$cubic-bezier: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 .container { 
   max-width: 1220px;
   margin: 0 auto;
@@ -55,6 +56,13 @@ $shadow-2: rgba(99,99,99,.1) 0px 0px 4px 0px;
 .success {
   color: $success-color;
   padding: 10px;
+}
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #aeaeafa1;
+  border-radius: 5px;
 }
 
 //-----------SwiperJS------------
