FE: Implement fixed filter - Implement fixed filter for filter sidebar on browse page

--- a/styles/browse.module.scss
+++ b/styles/browse.module.scss
@@ -81,7 +81,8 @@
   .browse__store_filters {
     position: fixed;
     top: 2rem;
-    left: 1.8rem;
+    // padding: 1rem;
+    // left: 1.8rem;
     width: 300px;
   }
   .browse__store_products_wrap {
